{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 400,
  "lineage": "2decd54d-627b-e584-15f3-439183886931",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:loadbalancer/app/3-tier/d4086c0fbc8188a5",
            "arn_suffix": "app/3-tier/d4086c0fbc8188a5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "3-tier-2119064593.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:loadbalancer/app/3-tier/d4086c0fbc8188a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "3-tier",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0b8e930e4567bea8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002883a4d50eda0ff"
              },
              {
                "subnet_id": "subnet-051e280e3221b4075"
              }
            ],
            "subnets": [
              "subnet-002883a4d50eda0ff",
              "subnet-051e280e3221b4075"
            ],
            "vpc_id": "vpc-01749bcbb72e03da4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:loadbalancer/app/3-tier/d4086c0fbc8188a5"
          },
          "dependencies": [
            "aws_security_group.albsg",
            "module.public_subnet1.aws_subnet.sub",
            "module.public_subnet2.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4719787dd923cd7",
            "arn": "arn:aws:ec2:ap-south-1:963329266843:elastic-ip/eipalloc-0f4719787dd923cd7",
            "association_id": "eipassoc-0742c1944cb885535",
            "domain": "vpc",
            "id": "eipalloc-0f4719787dd923cd7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c48850fdd411122e",
            "private_dns": "ip-10-0-1-213.ap-south-1.compute.internal",
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-52-66-13-206.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.13.206",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": " eip11"
            },
            "tags_all": {
              "Name": " eip11"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:internet-gateway/igw-0ed1eb8214495982a",
            "id": "igw-0ed1eb8214495982a",
            "owner_id": "963329266843",
            "region": "ap-south-1",
            "tags": {
              "Name": "IGW1"
            },
            "tags_all": {
              "Name": "IGW1"
            },
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener/app/3-tier/d4086c0fbc8188a5/7841327df65396ec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/frontend/cbb1d2e9e124a82a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener/app/3-tier/d4086c0fbc8188a5/7841327df65396ec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:loadbalancer/app/3-tier/d4086c0fbc8188a5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener/app/3-tier/d4086c0fbc8188a5/7841327df65396ec"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.frontend",
            "aws_security_group.albsg",
            "module.public_subnet1.aws_subnet.sub",
            "module.public_subnet2.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener/app/3-tier/d4086c0fbc8188a5/7841327df65396ec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/frontend/cbb1d2e9e124a82a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener/app/3-tier/d4086c0fbc8188a5/7841327df65396ec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:loadbalancer/app/3-tier/d4086c0fbc8188a5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener/app/3-tier/d4086c0fbc8188a5/7841327df65396ec"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.frontend",
            "aws_security_group.albsg",
            "module.public_subnet1.aws_subnet.sub",
            "module.public_subnet2.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/backend/122ff318a9403f75",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener-rule/app/3-tier/d4086c0fbc8188a5/7841327df65396ec/4aacc49c40c3a52c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api*",
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener-rule/app/3-tier/d4086c0fbc8188a5/7841327df65396ec/4aacc49c40c3a52c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener/app/3-tier/d4086c0fbc8188a5/7841327df65396ec",
            "priority": 1,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:listener-rule/app/3-tier/d4086c0fbc8188a5/7841327df65396ec/4aacc49c40c3a52c"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.albsg",
            "module.public_subnet1.aws_subnet.sub",
            "module.public_subnet2.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/backend/122ff318a9403f75",
            "arn_suffix": "targetgroup/backend/122ff318a9403f75",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/backend/122ff318a9403f75",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:963329266843:loadbalancer/app/3-tier/d4086c0fbc8188a5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/backend/122ff318a9403f75"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/frontend/cbb1d2e9e124a82a",
            "arn_suffix": "targetgroup/frontend/cbb1d2e9e124a82a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/frontend/cbb1d2e9e124a82a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:963329266843:loadbalancer/app/3-tier/d4086c0fbc8188a5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/frontend/cbb1d2e9e124a82a"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/backend/122ff318a9403f75-20251014131931583700000004",
            "port": 5000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/backend/122ff318a9403f75",
            "target_id": "i-0c383aadf96452d56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.rds",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_lb_target_group.backend",
            "aws_security_group.albsg",
            "aws_security_group.backendsg",
            "aws_security_group.rds_sg",
            "module.backend1.aws_instance.ec2",
            "module.private_subnet1.aws_subnet.sub",
            "module.private_subnet2.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/frontend/cbb1d2e9e124a82a-20251014131910017000000003",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:963329266843:targetgroup/frontend/cbb1d2e9e124a82a",
            "target_id": "i-0aaa2b723f3a023f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb_target_group.frontend",
            "aws_security_group.frontendsg",
            "module.frontend.aws_instance.ec2",
            "module.public_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4719787dd923cd7",
            "association_id": "eipassoc-0742c1944cb885535",
            "connectivity_type": "public",
            "id": "nat-0af4d9741c44a9ebc",
            "network_interface_id": "eni-0c48850fdd411122e",
            "private_ip": "10.0.1.213",
            "public_ip": "52.66.13.206",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-051e280e3221b4075",
            "tags": {
              "Name": "NATgw"
            },
            "tags_all": {
              "Name": "NATgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "module.public_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "privnacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:network-acl/acl-0846a4164681baaa7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0846a4164681baaa7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "963329266843",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-0e04cf3537d08ee71"
            ],
            "tags": {
              "Name": "privnacl"
            },
            "tags_all": {
              "Name": "privnacl"
            },
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "privnacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-021952209ad1c67a2",
            "network_acl_id": "acl-0846a4164681baaa7",
            "region": "ap-south-1",
            "subnet_id": "subnet-0e04cf3537d08ee71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.privnacl",
            "module.private_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pubnacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ae6ae11f2a31611a",
            "network_acl_id": "acl-05429e555c3441c80",
            "region": "ap-south-1",
            "subnet_id": "subnet-051e280e3221b4075"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pubnacl2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0e69071e640a73c2a",
            "network_acl_id": "acl-05429e555c3441c80",
            "region": "ap-south-1",
            "subnet_id": "subnet-002883a4d50eda0ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_subnet2.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pbrt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ed1eb8214495982a",
            "id": "r-rtb-003d6d6b6dbefbe471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-003d6d6b6dbefbe47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-003d6d6b6dbefbe47"
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privrt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:route-table/rtb-05542466afe6956df",
            "id": "rtb-05542466afe6956df",
            "owner_id": "963329266843",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af4d9741c44a9ebc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privrt1"
            },
            "tags_all": {
              "Name": "privrt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "rtb-05542466afe6956df",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.example",
            "module.public_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0885be38edf2bdc8b",
            "region": "ap-south-1",
            "route_table_id": "rtb-05542466afe6956df",
            "subnet_id": "subnet-0e04cf3537d08ee71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.example",
            "aws_route_table.privrt1",
            "module.private_subnet1.aws_subnet.sub",
            "module.public_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af20d67137d45a2e",
            "region": "ap-south-1",
            "route_table_id": "rtb-05542466afe6956df",
            "subnet_id": "subnet-0b4fc39eb5c7d510b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.example",
            "aws_route_table.privrt1",
            "module.private_subnet2.aws_subnet.sub",
            "module.public_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:security-group/sg-0b8e930e4567bea8c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8e930e4567bea8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "albsg",
            "name_prefix": "",
            "owner_id": "963329266843",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "albsg"
            },
            "tags_all": {
              "Name": "albsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "sg-0b8e930e4567bea8c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backendsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:security-group/sg-06d02a9fed4433524",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d02a9fed4433524",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow API traffic from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8e930e4567bea8c"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "backendsg",
            "name_prefix": "",
            "owner_id": "963329266843",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backendsg"
            },
            "tags_all": {
              "Name": "backendsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "sg-06d02a9fed4433524",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.albsg",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontendsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:security-group/sg-0fcf09d90b2b963e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcf09d90b2b963e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "frontendsg",
            "name_prefix": "",
            "owner_id": "963329266843",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontendsg"
            },
            "tags_all": {
              "Name": "frontendsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "sg-0fcf09d90b2b963e1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:security-group/sg-002b2bb7503bc9906",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002b2bb7503bc9906",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20251014130154078700000001",
            "name_prefix": "terraform-",
            "owner_id": "963329266843",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "sg-002b2bb7503bc9906",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:security-group-rule/sgr-055b338bc714a20be",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-055b338bc714a20be",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0fcf09d90b2b963e1",
            "security_group_rule_id": "sgr-055b338bc714a20be",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "sgr-055b338bc714a20be",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.frontendsg",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:security-group-rule/sgr-05052970724441b74",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-05052970724441b74",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0fcf09d90b2b963e1",
            "security_group_rule_id": "sgr-05052970724441b74",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "sgr-05052970724441b74",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.frontendsg",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.backend1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:963329266843:instance/i-0c383aadf96452d56",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c383aadf96452d56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key123",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-057653b757e30fe86"
              }
            ],
            "primary_network_interface_id": "eni-057653b757e30fe86",
            "private_dns": "ip-10-0-2-38.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.38",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e17c6ab4c98ffc1a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e04cf3537d08ee71",
            "tags": {
              "Name": "backend"
            },
            "tags_all": {
              "Name": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d02a9fed4433524"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "i-0c383aadf96452d56",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_db_instance.rds",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_security_group.albsg",
            "aws_security_group.backendsg",
            "aws_security_group.rds_sg",
            "module.private_subnet1.aws_subnet.sub",
            "module.private_subnet2.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:963329266843:instance/i-0aaa2b723f3a023f5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aaa2b723f3a023f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key123",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-059e43b28018da387"
              }
            ],
            "primary_network_interface_id": "eni-059e43b28018da387",
            "private_dns": "ip-10-0-1-127.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "public_ip": "3.110.188.108",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d9a22d6e119069a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051e280e3221b4075",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fcf09d90b2b963e1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "i-0aaa2b723f3a023f5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.frontendsg",
            "module.public_subnet1.aws_subnet.sub",
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:subnet/subnet-0e04cf3537d08ee71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e04cf3537d08ee71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963329266843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "subnet-0e04cf3537d08ee71",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:subnet/subnet-0b4fc39eb5c7d510b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4fc39eb5c7d510b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963329266843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "subnet-0b4fc39eb5c7d510b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:subnet/subnet-051e280e3221b4075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051e280e3221b4075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963329266843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "subnet-051e280e3221b4075",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:subnet/subnet-002883a4d50eda0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002883a4d50eda0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963329266843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "vpc_id": "vpc-01749bcbb72e03da4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "963329266843",
            "id": "subnet-002883a4d50eda0ff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.threetier.aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "module": "module.threetier",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "threetier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:963329266843:vpc/vpc-01749bcbb72e03da4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05429e555c3441c80",
            "default_route_table_id": "rtb-003d6d6b6dbefbe47",
            "default_security_group_id": "sg-0a4378bceb37a0928",
            "dhcp_options_id": "dopt-090a6160f1e915cea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01749bcbb72e03da4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003d6d6b6dbefbe47",
            "owner_id": "963329266843",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}